--- a/koa/package.json
+++ b/koa/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "koa": "^2.5.1",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.5"
   },
   "devDependencies": {},
   "scripts": {
